cmake_minimum_required(VERSION 3.19)

list(APPEND SourceFiles
    "Audio/AudioFile.cpp"
    "Audio/AudioFile.h"
    "Audio/AudioManager.cpp"
    "Audio/AudioManager.h"
    "Audio/AudioMixingNodeGraph.cpp"
    "Audio/AudioMixingNodeGraph.h"
    "Audio/AudioNodeTypes.cpp"
    "Audio/AudioNodeTypes.h"
    "Audio/AudioStructs.h"
    "Audio/SoundEffectNodeGraph.cpp"
    "Audio/SoundEffectNodeGraph.h"
    "Camera/Camera.cpp"
    "Camera/Camera.h"
    "Camera/CameraManager.cpp"
    "Camera/CameraManager.h"
    "Camera/Display.cpp"
    "Camera/Display.h"
    "Collision/ColliderDebug.cpp"
    "Collision/ColliderDebug.h"
    "Collision/Colliders.h"
    "Collision/CollisionComponent.cpp"
    "Collision/CollisionComponent.h"
    "Collision/CollisionFunctionality.cpp"
    "Collision/CollisionFunctionality.h"
    "Collision/CollisionSystem.cpp"
    "Collision/CollisionSystem.h"
    "Components/Component.cpp"
    "Components/Component.h"
    "Components/ComponentSystem.h"
    "Components/SpriteComponent.h"
    "Components/TransformComponent.h"
    "Debugging/DebugLine.h"
    "Debugging/DebugLineDrawer.cpp"
    "Debugging/DebugLineDrawer.h"
    "Debugging/DebugLineRenderObject.cpp"
    "Debugging/DebugLineRenderObject.h"
    "EngineTools/EasingTester.cpp"
    "EngineTools/EasingTester.h"
    "EngineTools/EngineTools.cpp"
    "EngineTools/EngineTools.h"
    "FileSystem/WinFileWatcher.cpp"
    "FileSystem/WinFileWatcher.h"
    "Functionalities/BaseFunctionality.h"
    "Functionalities/Functionality.h"
    "Functionalities/FunctionalitySystem.h"
    "Functionalities/SpriteRenderingFunctionality.cpp"
    "Functionalities/SpriteRenderingFunctionality.h"
    "Functionalities/TimerFunctionality.cpp"
    "Functionalities/TimerFunctionality.h"
    "Functionalities/TransformFunctionality.cpp"
    "Functionalities/TransformFunctionality.h"
    "Graphics/RenderNodeGraph/RenderNodeGraph.cpp"
    "Graphics/RenderNodeGraph/RenderNodeGraph.h"
    "Graphics/RenderNodeGraph/RenderNodeTypes.cpp"
    "Graphics/RenderNodeGraph/RenderNodeTypes.h"
    "Graphics/EngineUniformBuffer.cpp"
    "Graphics/EngineUniformBuffer.h"
    "Graphics/LineListRenderObject.cpp"
    "Graphics/LineListRenderObject.h"
    "Graphics/OpenGLFacade.cpp"
    "Graphics/OpenGLFacade.h"
    "Graphics/RenderCommandProcessor.cpp"
    "Graphics/RenderCommandProcessor.h"
    "Graphics/Renderer.cpp"
    "Graphics/Renderer.h"
    "Graphics/RenderHandle.cpp"
    "Graphics/RenderHandle.h"
    "Graphics/RenderObject.cpp"
    "Graphics/RenderObject.h"
    "Graphics/RenderSettingsManager.cpp"
    "Graphics/RenderSettingsManager.h"
    "Graphics/RenderTarget.cpp"
    "Graphics/RenderTarget.h"
    "Graphics/ScreenPassRenderObject.cpp"
    "Graphics/ScreenPassRenderObject.h"
    "Graphics/Shader.cpp"
    "Graphics/Shader.h"
    "Graphics/ShaderParser.cpp"
    "Graphics/ShaderParser.h"
    "Graphics/ShaderProgram.cpp"
    "Graphics/ShaderProgram.h"
    "Graphics/SpriteRenderObject.cpp"
    "Graphics/SpriteRenderObject.h"
    "Graphics/Texture.cpp"
    "Graphics/Texture.h"
    "Graphics/UniformBuffer.h"
    "Graphics/VertexAttributes.h"
    "Graphics/VertexBuffer.h"
    "Graphics/VertexBufferArray.h"
    "Graphics/VertexTypes.h"
    "Imgui/AssetBrowser.cpp"
    "Imgui/AssetBrowser.h"
    "Imgui/Canvas.cpp"
    "Imgui/Canvas.h"
    "Imgui/DockSpace.cpp"
    "Imgui/DockSpace.h"
    "Imgui/FileSelector.cpp"
    "Imgui/FileSelector.h"
    "Imgui/NodeGraphGui.cpp"
    "Imgui/NodeGraphGui.h"
    "Input/InputItems.h"
    "Input/InputSystem.cpp"
    "Input/InputSystem.h"
    "Logging/ImGuiLogger.cpp"
    "Logging/ImGuiLogger.h"
    "Message/DispatchableBuffer.cpp"
    "Message/DispatchableBuffer.h"
    "Message/DispatchRouter.cpp"
    "Message/DispatchRouter.h"
    "Message/Messages.h"
    "Message/MessageSubscriber.cpp"
    "Message/MessageSubscriber.h"
    "Message/MessageTypes.h"
    "NodeGraph/SlotCustomization/SlotColors.h"
    "NodeGraph/SlotCustomization/SlotCustomization.md"
    "NodeGraph/SlotCustomization/SlotInputEdits.h"
    "NodeGraph/SlotCustomization/SlotSerialization.h"
    "NodeGraph/CommonNodes.h"
    "NodeGraph/NodeGraph.cpp"
    "NodeGraph/NodeGraph.h"
    "NodeGraph/Nodegraph.md"
    "NodeGraph/NodeTypes.cpp"
    "NodeGraph/NodeTypes.h"
    "Object/CreateObjectJob.h"
    "Object/DependencyDestructor.cpp"
    "Object/DependencyDestructor.h"
    "Object/Object.cpp"
    "Object/Object.h"
    "Policies/Scheduler.cpp"
    "Policies/Scheduler.h"
    "Program/Engine.cpp"
    "Program/Engine.h"
    "Program/GlfwFacade.cpp"
    "Program/GlfwFacade.h"
    "Program/ImguiWrapper.cpp"
    "Program/ImguiWrapper.h"
    "Program/ProgramSystem.cpp"
    "Program/ProgramSystem.h"
    "Program/Window.cpp"
    "Program/Window.h"
    "Randomizer/Randomizer.cpp"
    "Randomizer/Randomizer.h"
    "Resources/Asset.h"
    "Resources/AssetDatabase.h"
    "Resources/AssetLink.h"
    "Resources/Resource.h"
    "Resources/ResourceProxy.h"
    "Resources/ResourceSystem.h"
    "Threads/TaskManager.cpp"
    "Threads/TaskManager.h"
    "Threads/ThreadChecker.h"
    "Utilities/Container/BackendImplementations/ColonyBackend.h"
    "Utilities/Container/BackendImplementations/LinkedListBackend.h"
    "Utilities/Container/BackendImplementations/UnorderedMapBackend.h"
    "Utilities/Container/BackendImplementations/VectorBackend.h"
    "Utilities/Container/Traits/ContainerTraits.h"
    "Utilities/Container/Traits/Implications.h"
    "Utilities/Container/Traits/TraitList.h"
    "Utilities/Container/Container.h"
    "Utilities/Container/ContainerBackend.h"
    "Utilities/Debugging/Debugged.cpp"
    "Utilities/Debugging/Debugged.h"
    "Utilities/Easing/EasingFunctions.h"
    "Utilities/Json/JsonExtensions.h"
    "Utilities/TypeTraits/Concepts.h"
    "Utilities/TypeTraits/ContainsType.h"
    "Utilities/TypeTraits/ParameterPack.h"
    "Utilities/TypeTraits/TypeTraits.h"
    "Utilities/BezierCurve.cpp"
    "Utilities/BezierCurve.h"
    "Utilities/Color.h"
    "Utilities/Id.cpp"
    "Utilities/Id.h"
    "Utilities/Platform.cpp"
    "Utilities/Platform.h"
    "Utilities/TimeKeeper.cpp"
    "Utilities/TimeKeeper.h"
    "Constants.h"
    "glad.c"
    "pch.cpp"
    "pch.h")

set_source_files_properties("glad.c" PROPERTIES LANGUAGE CXX)

add_library(WonderMake STATIC ${SourceFiles})

set_pedantic_warning_level(WonderMake)
set_whole_archive(WonderMake)
target_include_directories(WonderMake PUBLIC ".")
target_link_libraries(WonderMake Imgui NlohmannJson SoLoud Stb WonderMakeBase WonderMakeDebugUi WonderMakeUtility WonderMakeIo WonderMakeEngine)

add_compile_definitions("IMGUI_DEFINE_MATH_OPERATORS")

#Temporary until GLFW include is fixed.
target_link_libraries(WonderMake "${CMAKE_CURRENT_LIST_DIR}/../../External/glfw-3.3/Lib/glfw3_x64_${CMAKE_BUILD_TYPE}.lib")

#Temporary until SoLoud include is fixed.
target_link_libraries(WonderMake "${CMAKE_CURRENT_LIST_DIR}/../../External/SoLoud/Lib/soloud_x64_${CMAKE_BUILD_TYPE}.lib")
